my other changes

--- a/src/components/pages/Shop.scss
+++ b/src/components/pages/Shop.scss
@@ -17,7 +17,7 @@ body {
   display: flex;
   // align-items: center;
   // justify-content: center;
-  background: white;
+  background: #ff5d5d;
   font-family: sans-serif;
 }
 
