--- a/src/components/pages/Home.scss
+++ b/src/components/pages/Home.scss
@@ -31,7 +31,7 @@ header {
     font-family: "Nanum Myeongjo", serif;
     // margin-bottom: 10px;
     font-size: 80px;
-    font-weight: 1%;
+    font-weight: 1%git;
     margin-top: 0% !important;
   }
 
