--- a/src/components/pages/Shop.scss
+++ b/src/components/pages/Shop.scss
@@ -19,6 +19,11 @@ body {
   // justify-content: center;
   background: #ff5d5d;
   font-family: sans-serif;
+  display: flex block;
+  flex-flow: row initial !important;
+  justify-content: flex-start !important;
+  align-items: inherit !important;
+  align-content: space-between !important;
 }
 
 .menu {
@@ -300,7 +305,7 @@ input[type="radio"] {
   width: 217px;
   height: 21px;
   opacity: 0;
-  background-color: #fff;
+  background-color: #efefef;
   transform: scale(0);
 }
 
@@ -349,7 +354,7 @@ input[type="radio"] {
 }
 
 .option:nth-child(2) input[type="radio"]:checked ~ .label:before {
-  background-color: #ea4c89;
+  background-color: #0057ff;
 }
 
 .option:nth-child(2) input[type="radio"]:checked ~ .opt-val {
@@ -365,7 +370,7 @@ input[type="radio"] {
 }
 
 .option:nth-child(4) input[type="radio"]:checked ~ .label:before {
-  background-color: #32c766;
+  background-color: #0057ff;
 }
 
 .option:nth-child(4) input[type="radio"]:checked ~ .opt-val {
@@ -373,7 +378,7 @@ input[type="radio"] {
 }
 
 .option:nth-child(5) input[type="radio"]:checked ~ .label:before {
-  background-color: #f48024;
+  background-color: #0057ff;
 }
 
 .option:nth-child(5) input[type="radio"]:checked ~ .opt-val {
@@ -381,36 +386,12 @@ input[type="radio"] {
 }
 
 .option:nth-child(6) input[type="radio"]:checked ~ .label:before {
-  background-color: #006400;
+  background-color: #0057ff;
   border-radius: 0 0 4px 4px;
 }
 
 .option:nth-child(6) input[type="radio"]:checked ~ .opt-val {
   top: -231px;
-}
-
-.option .fa-codepen {
-  color: #000;
-}
-
-.option .fa-dribbble {
-  color: #ea4c89;
-}
-
-.option .fa-behance {
-  color: #0057ff;
-}
-
-.option .fa-hackerrank {
-  color: #32c766;
-}
-
-.option .fa-stack-overflow {
-  color: #f48024;
-}
-
-.option .fa-free-code-camp {
-  color: #006400;
 }
 
 #option-bg {
@@ -434,13 +415,13 @@ input[type="radio"] {
 
 .option:nth-child(1):hover ~ #option-bg {
   top: 0;
-  background-color: #000;
+  background-color: #0057ff;
   border-radius: 4px 4px 0 0;
 }
 
 .option:nth-child(2):hover ~ #option-bg {
   top: 40px;
-  background-color: #ea4c89;
+  background-color: #0057ff;
 }
 
 .option:nth-child(3):hover ~ #option-bg {
@@ -450,17 +431,17 @@ input[type="radio"] {
 
 .option:nth-child(4):hover ~ #option-bg {
   top: 120px;
-  background-color: #32c766;
+  background-color: #0057ff;
 }
 
 .option:nth-child(5):hover ~ #option-bg {
   top: 160px;
-  background-color: #f48024;
+  background-color: #0057ff;
 }
 
 .option:nth-child(6):hover ~ #option-bg {
   top: 200px;
-  background-color: #006400;
+  background-color: #0057ff;
   border-radius: 0 0 4px 4px;
 }
 
@@ -571,7 +552,7 @@ $button-text-color: #fff;
     height: 100% !important;
     background-color: #efefef !important;
     display: flex !important;
-    flex-flow: row wrap !important;
+    flex-flow: column-reverse !important;
     justify-content: space-around !important;
     align-items: stretch !important;
     align-content: space-around !important;
@@ -802,13 +783,28 @@ body {
 #icons {
   text-decoration: none;
 }
+.items {
+  padding: 10px;
+  display: flex;
+  flex-flow: row wrap !important;
+  justify-content: space-around !important;
+  align-items: stretch !important;
+  align-content: space-around !important;
+}
 .product-card {
-  width: 300px;
+  width: 350px;
   position: relative;
   box-shadow: 0 2px 7px #dfdfdf;
   margin: 20px auto;
   border-radius: 10px;
   background: #fafafa;
+  float: right !important;
+  height: 550px;
+  display: inline-block;
+  flex-flow: row wrap !important;
+  justify-content: space-around !important;
+  align-items: stretch !important;
+  align-content: space-around !important;
 }
 
 .badge {
